@@ -4,6 +4,8 @@ Trunk (unreleased changes)
 
   INCOMPATIBLE CHANGES
 
+   HADOOP-6432. Add Statistics support in FileContext. (jitendra)
+
    HADOOP-6904. Support method based RPC compatiblity. (hairong)
 
   NEW FEATURES
